# malefic-3rd-template

./: .gitignore  Cargo.toml  README.md
malefic-3rd-c/: Cargo.toml
malefic-3rd-c/src/: lib.rs
malefic-3rd-c/src/c/: module.c  module.h
malefic-3rd-ffi/: Cargo.toml
malefic-3rd-ffi/src/: lib.rs
malefic-3rd-go/: Cargo.toml  build.rs
malefic-3rd-go/src/: lib.rs
malefic-3rd-go/src/go/: go.mod  main.go
malefic-3rd-go/src/go/malefic/: module.proto
malefic-3rd-nim/: Cargo.toml
malefic-3rd-nim/src/: lib.rs
malefic-3rd-nim/src/nim/example/: example.nim
malefic-3rd-rust/: Cargo.toml
malefic-3rd-rust/src/: lib.rs
malefic-3rd-zig/: Cargo.toml
malefic-3rd-zig/src/: lib.rs
malefic-3rd-zig/src/zig/example/: example.zig
src/: lib.rs  prelude.rs
src/example/: mod.rs
src/golang_module/: build.rs  mod.rs
src/golang_module/go/: go.mod  go.sum  main.go
src/golang_module/go/example/: example.go
src/golang_module/go/hackbrowser/: hackbrowser.go
src/golang_module/go/malefic/: module.pb.go  module.proto
src/rust_module/: mod.rs
tests/: test_load_dll.rs
