[workspace]
members = [
    ".",
    "malefic-3rd-rust",
    "malefic-3rd-go",
    "malefic-3rd-c",
    "malefic-3rd-zig",
    "malefic-3rd-nim",
]

[workspace.dependencies]
malefic-proto = { git = "https://github.com/chainreactors/malefic", branch = "master" }
malefic-module = { git = "https://github.com/chainreactors/malefic", branch = "master", features = ["ffi"] }
malefic-macro = { git = "https://github.com/chainreactors/malefic", branch = "master" }
malefic-obfuscate = { git = "https://github.com/chainreactors/malefic", branch = "master" }

async-trait = "0.1"
anyhow = "1.0"
futures = "0.3.31"
prost = "0.14.3"

# Pin transitive deps to versions compatible with Rust 1.74 (avoid edition 2024 crates)
crypto-common = "=0.1.6"
bytes = "=1.10.1"
hashbrown = "=0.15.5"
getrandom = "=0.2.16"

[package]
name = "malefic-3rd-template"
version = "0.1.0"
edition = "2021"

[lib]
name = "malefic_3rd"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["as_cdylib", "full"]
as_cdylib = []

full = ["rust_module", "golang_module", "c_module", "zig_module", "nim_module"]

rust_module = ["malefic-3rd-rust"]
golang_module = ["malefic-3rd-go"]
golang_hackbrowser = ["malefic-3rd-go/go_hackbrowser"]
c_module = ["malefic-3rd-c"]
zig_module = ["malefic-3rd-zig"]
nim_module = ["malefic-3rd-nim"]

[dependencies]
malefic-proto = { workspace = true }
malefic-module = { workspace = true }
malefic-3rd-rust = { path = "malefic-3rd-rust", optional = true }
malefic-3rd-go = { path = "malefic-3rd-go", optional = true }
malefic-3rd-c = { path = "malefic-3rd-c", optional = true }
malefic-3rd-zig = { path = "malefic-3rd-zig", optional = true }
malefic-3rd-nim = { path = "malefic-3rd-nim", optional = true }

async-trait = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

# Pin transitive deps
crypto-common = { workspace = true }
bytes = { workspace = true }
hashbrown = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
libloading = "0.8"

[profile.release]
panic = "abort"
opt-level = "z"
strip = true
lto = "fat"
codegen-units = 1
